@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -51,7 +51,8 @@ struct SubPicDesc {
 
 enum RelativeTo {
     WINDOW,
-    VIDEO
+    VIDEO,
+    BEST_FIT
 };
 
 //
