@@ -39,6 +39,7 @@ next version - not released yet
 ! DVB subtitles: Subtitles were sometimes only partially rendered with some parts disappearing immediately
 ! DVB and PGS subtitles: Subtitles were sometimes one frame late. This was invisible most of the time
   but it could produce blinking in some cases
+! ISR: Crop PGS and DVB subtitles if they don't fit into video frame
 ! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
 ! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
 ! Ticket #2994, Fix toolbar separators not being properly painted
